--- a/assets/stylesheets/pages/_index.scss
+++ b/assets/stylesheets/pages/_index.scss
@@ -14,6 +14,7 @@
 
   @media #{$desktop} {
     display: flex;
+    align-items: center;
 
     .header {
       flex-grow: 1;
